--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,9 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
-	// You may need to force-disable transitiveness on them.
+	//OWNER library
+	modCompile "org.aeonbits.owner:owner:1.0.10"
+	include "org.aeonbits.owner:owner:1.0.10"
 }
 
 processResources {
